[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "waybill"
version = "0.1.0"
description = "CLI tool for station-to-station hauling opportunities in EVE Online"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Waybill" }]
dependencies = [
    "typer>=0.12.0",
]

[project.scripts]
waybill = "eve_haul.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
